dice_game/frontend/static/css/index.css
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

#main {
  position: fixed;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

#app {
  width: 100%;
  height: 100%;
}

.center {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.center-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.main-background {
  background: url("../images/Main Background.jpg") center;
  height: 100%;
  width: 100%;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.game-background {
  background: url("../images/Game Background.jpg") center;
  height: 100%;
  width: 100%;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.top-right {
  float: right;
}

.center-left {
  position: absolute;
  top: 50%;
  left: 10%;
  transform: translate(-50%, -50%);
  max-width: 128px;
}

.center-right {
  position: absolute;
  top: 50%;
  left: 90%;
  transform: translate(-50%, -50%);
  max-width: 128px;
}

.bottom-left {
  position: absolute;
  bottom: 0;
  left: 5px;
}

.bottom-right {
  position: absolute;
  bottom: 0;
  right: 5px;
}

.score-positioning {
  transform: translate(65%, 100%);
}

